Responsive layout issue

--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,20 @@
     
 }
 body{
-    background-color: #f9f5f5;
-    margin: 0;
-    padding: 0;
+    background-color: black;
+
+}
+.responsive{
     width: 100%;
-    height: 100%;
+    height: 1500px;
+    max-height: 1500px;
+    min-height: 1500px;
     background-image: url(wild-nature-7680x4320.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-blend-mode: normal;
     background-position: center;
     background-attachment: fixed;
-}
-.body{
-    width: 100%;
-    height: 100%;
-
 }
 .loader {
     width: 120px;
